Fix double scrollbar on public site

--- a/public/style.css
+++ b/public/style.css
@@ -21,7 +21,6 @@
 }
 
 html, body {
-    overflow-x: hidden;
     width: 100%;
 }
 
